fix footer link URL

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<footer class="footer">
 			<p>Take a look at <a href="https://github.com/pacificpelican/gallery4/blob/master/readme.md">the <b>readme</b> file on GitHub</a>--it's pretty straightforward to set up your own phots site wherever you can use PHP and mySQL, which is a lot of web hosts.</p>
 		</footer>
-		<footer class="credit">Gallery4 was created by <a href="http://danmckewon.info">Dan McKeown</a></footer>
+		<footer class="credit">Gallery4 was created by <a href="http://danmckeown.info">Dan McKeown</a></footer>
 	</div>
 
 	<br /><br />
