use jpg for screeshot image

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			</ul>
 		</aside>
 		<section>
-				<p><img src="assets/Screenshot-2017-10-26-21-31-21.png" /></p>
+				<p><img src="assets/Screenshot-2017-10-26-21-31-21.jpg" /></p>
 		</section>
 		<footer class="footer">
 			<p>Take a look at <a href="https://github.com/pacificpelican/gallery4/blob/master/readme.md">the <b>readme</b> file on GitHub</a>--it's pretty straightforward to set up your own phots site wherever you can use PHP and mySQL, which is a lot of web hosts.</p>
