update index page with links and typo fix

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<p><img src="assets/Screenshot-2017-10-26-21-31-21.jpg" /></p>
 		</section>
 		<footer class="footer">
-			<p>Take a look at <a href="https://github.com/pacificpelican/gallery4/blob/master/readme.md">the <b>readme</b> file on GitHub</a>--it's pretty straightforward to set up your own phots site wherever you can use PHP and mySQL, which is a lot of web hosts.</p>
+			<p>Take a look at <a href="https://github.com/pacificpelican/gallery4/blob/master/readme.md">the <b>readme</b> file on GitHub</a>--it's pretty straightforward to set up your own photography site wherever you can use <a href="http://php.net/">PHP</a> and <a href="https://www.mysql.com/">mySQL</a>, which is a lot of web hosts.</p>
 		</footer>
 		<footer class="credit">Gallery4 was created by <a href="http://danmckeown.info">Dan McKeown</a></footer>
 	</div>
